--- a/success.html
+++ b/success.html
@@ -64,7 +64,11 @@
             </div>
         </div>
 
-        <a href="dashboard.html" class="inline-block w-full mt-10 tok-gradient text-black font-black py-5 rounded-2xl text-sm uppercase tracking-widest hover:scale-[1.02] transition transform shadow-xl">
+        <button onclick="requestNotificationPermission()" class="w-full mt-8 bg-white/10 text-white border border-white/20 font-bold py-3 rounded-xl text-xs uppercase tracking-widest hover:bg-white/20 transition">
+            🔔 Enable Notifications
+        </button>
+
+        <a href="dashboard.html" class="inline-block w-full mt-4 tok-gradient text-black font-black py-5 rounded-2xl text-sm uppercase tracking-widest hover:scale-[1.02] transition transform shadow-xl">
             Go to My Dashboard
         </a>
     </div>
