--- a/f4f.html
+++ b/f4f.html
@@ -80,7 +80,7 @@
         </a>
     </nav>
 
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
     <script src="tiktoks.js"></script>
     <script>
         function loadF4FCreators() {
