--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
         </div>
     </div>
 
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
     <script src="tiktoks.js"></script>
     <script>
         // Chatbot functionality
