--- a/login.html
+++ b/login.html
@@ -121,7 +121,7 @@
         <p class="text-xs text-gray-600 uppercase tracking-widest">© 2025 TokSync. All rights reserved.</p>
     </footer>
 
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
     <script>
         const loginForm = document.getElementById('login-form');
         const loginEmail = document.getElementById('login-email');
