--- a/me.html
+++ b/me.html
@@ -84,7 +84,7 @@
         </a>
     </nav>
 
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
     <script>
         function setupLogoutHandler() {
             const logoutBtn = document.getElementById('logout-btn');
