--- a/signup.html
+++ b/signup.html
@@ -240,7 +240,7 @@
         <p class="text-[10px] text-gray-600 uppercase tracking-widest">&copy; 2026 TokSync. Real growth only.</p>
     </footer>
 
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
     <script>
         function extractTikTokHandle(url) {
             if (!url) return '';
