--- a/success.html
+++ b/success.html
@@ -73,7 +73,7 @@
         </a>
     </div>
 v 
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
     <script>
         function displaySuccessProfile() {
             const handleEl = document.getElementById('success-handle');
