--- a/dashboard.html
+++ b/dashboard.html
@@ -149,7 +149,7 @@
         </div>
     </div>
 
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
     <script src="tiktoks.js"></script>
     <script>
         document.getElementById('link-drop-form').addEventListener('submit', (e) => {
