--- a/rank.html
+++ b/rank.html
@@ -93,7 +93,7 @@
         </a>
     </nav>
 
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
     <script type="module">
         import { getDatabase, ref, get } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
 
